objects/LAT_MasiveOwnerLine__c.object
<CustomObject>
    <fields>
        <fullName>LAT_AccountAN8__c</fullName>
        <label>AN8</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MasiveOwnerLines</relationshipLabel>
        <relationshipName>MasiveOwnerLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LineExecuted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Header</label>
        <referenceTo>LAT_MasiveOwnerHeader__c</referenceTo>
        <relationshipLabel>MasiveOwnerLines</relationshipLabel>
        <relationshipName>MasiveOwnerLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_NewValue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NewValue</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MasiveOwnerLineNewValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_OldValue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OldValue</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MasiveOwnerLineOldValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MasiveOwnerLine</label>
    <listViews>
        <fullName>Lines</fullName>
        <columns>NAME</columns>
        <columns>LAT_Account__c</columns>
        <columns>LAT_OldValue__c</columns>
        <columns>LAT_NewValue__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>LAT_Header__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>BRL</value>
        </filters>
        <label>Lines BR</label>
        <language>es_MX</language>
    </listViews>
    <nameField>
        <displayFormat>MOL-{0000}</displayFormat>
        <label>MasiveOwnerLine Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MasiveOwnerLines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>